<resources>
    <string name="app_name">NSI Projekat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="hint_kI">Email</string>
    <string name="hint_pW">Password</string>
    <string name="hint_FName">First Name</string>
    <string name="hint_LName">Last Name</string>
    <string name="btnReg">Sign In</string>
    <string name="tVlogin">Login</string>
    <string name="btnAddPicture">Add Picture</string>
    <string name="btnLogin">Login</string>
    <string name="tVReg">Sign In</string>
    <string name="tVSignOut">Logout</string>
    <string name="hint_Email">Email</string>
    <string name="menu_chat">Chat</string>
    <string name="fetch_remote_welcome_message">fetch remote welcome</string>
    <string name="menu_remote">Remote</string>

    <string name="menu_places">Places</string>
    <string name="btnAddPlace">Add place</string>
    <string name="btnSelectLocation">Choose location on map</string>
    <string name="mapLabel">Choose location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_search_by_name">Enable search by name</string>
    <string name="enable_search_by_distance">Enable search by distance</string>
    <string name="set_filters">Set filters</string>
    <string name="crashButton">Crash</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="place_name">Place Name</string>
    <string name="send">Send</string>
    <string name="sendRequest">Send chat request</string>
    <string name="acceptBtn">Accept</string>
    <string name="denyBtn">Deny</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="userName">First and Last name:</string>
    <string name="editName">Change Name</string>
    <string name="editPassword">Change Password</string>
    <string name="areYouSure">Are you sure you want to update your profile picture?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="changeName">Change First and Last Name</string>
    <string name="changePassword">Change Password</string>
    <string name="tvForgotPassword">I forgot my password</string>
    <string name="account">Account Info</string>
</resources>