<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_remote"
            android:icon="@drawable/ic_baseline_cloud_24"
            android:title="@string/menu_remote" />
        <item
            android:id="@+id/nav_places"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_places" />
        <item
            android:id="@+id/nav_crash"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/crashButton" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account" />
    </group>
</menu>